[gd_scene load_steps=4 format=2]

[ext_resource path="res://Levels/Level_0/Scripts/Player/PlayerBullet.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level_0/Assets/Player/Asset 6PlayerBullet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.465, 7.21628 )

[node name="PlayerBullet" type="Node2D"]
position = Vector2( 603.53, 303.704 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TelepositionNode" type="Node2D" parent="Sprite"]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Sprite"]

[node name="Area2D" type="Area2D" parent="Sprite" groups=[
"PlayerProjectile",
]]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 1 )
[connection signal="screen_exited" from="Sprite/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Sprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
